--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 python-telegram-bot==12.8
-sqlalchemy
+sqlalchemy==1.3.19
 pillow
 toml
 emoji
 alembic
 pyrogram==0.17.1
-tgcrypto==1.2.1
+tgcrypto==1.2.2
